# simple-contract-calls

./: Cargo.toml
src/: main.rs
