[package]
name = "simple-contract-calls"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-contract = "0.1.2"
alloy-network = "0.1.2"
alloy-primitives = "0.7.6"
alloy-provider = "0.1.2"
alloy-signer = "0.1.2"
alloy-signer-local = "0.1.2"
alloy-sol-types = "0.7.6"
serde = "1.0.203"
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
url = "2.5.2"
